# mdproptools

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
data/mg_tfsi_dme/: dump.nvt.0.dump  dump.nvt.100000.dump  dump.nvt.1000000.dump  dump.nvt.1050000.dump  dump.nvt.1100000.dump  dump.nvt.1200000.dump  dump.nvt.1300000.dump  dump.nvt.1350000.dump  dump.nvt.1400000.dump  dump.nvt.1500000.dump  dump.nvt.1550000.dump  dump.nvt.1600000.dump  dump.nvt.1700000.dump  dump.nvt.1800000.dump  dump.nvt.1850000.dump  dump.nvt.1900000.dump  dump.nvt.1950000.dump  dump.nvt.200000.dump  dump.nvt.2000000.dump  dump.nvt.2050000.dump  dump.nvt.2100000.dump  dump.nvt.2150000.dump  dump.nvt.2200000.dump  dump.nvt.2250000.dump  dump.nvt.2300000.dump  dump.nvt.2350000.dump  dump.nvt.2400000.dump  dump.nvt.2500000.dump  dump.nvt.2550000.dump  dump.nvt.2650000.dump  dump.nvt.2700000.dump  dump.nvt.2750000.dump  dump.nvt.2800000.dump  dump.nvt.2950000.dump  dump.nvt.300000.dump  dump.nvt.3000000.dump  dump.nvt.3200000.dump  dump.nvt.3250000.dump  dump.nvt.3300000.dump  dump.nvt.3350000.dump  (+34 more)
data/structural/: Mg_2TFSI_G1.lammpstrj.5000000  dump.nvt.1150000.dump  dump.nvt.1250000.dump  dump.nvt.1450000.dump  dump.nvt.150000.dump  dump.nvt.1650000.dump  dump.nvt.1750000.dump  dump.nvt.2450000.dump  dump.nvt.250000.dump  dump.nvt.2600000.dump  dump.nvt.2850000.dump  dump.nvt.2900000.dump  dump.nvt.3050000.dump  dump.nvt.3100000.dump  dump.nvt.3150000.dump  dump.nvt.3450000.dump  dump.nvt.3750000.dump  dump.nvt.3800000.dump  dump.nvt.3900000.dump  dump.nvt.3950000.dump  dump.nvt.4100000.dump  dump.nvt.4300000.dump  dump.nvt.50000.dump  (+7 more)
dynamical/: conductivity.py
examples/: clusters.csv  conf_1.xyz  conf_2.xyz  conf_3.xyz  configurations.csv  mg_tfsi_dme_analysis.ipynb  mg_tfsi_dme_analysis2.ipynb  structural_analysis.ipynb  top_conf.csv
lammps/: constants.py
mdproptools/: __init__.py
structural/: README.md  number_density.py  rdf.csv  rdf_functions.py  rdf_new_atomtypes_functions.py  rdf_speeded.py
(+120 files in other folders)
