[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdproptools"
authors = [
    {name = "Rasha Atwi", email = "rasha.atwi@stonybrook.edu"},
    {name = "Matthew Bliss", email = "matthew.bliss@stonybrook.edu"},
    {name = "Maxim Makeev", email = "maxim.makeev@stonybrook.edu"}
]
dynamic = ["version"]
description = "mdproptools contains MD analysis tools"
readme = "README.md"
license = { text = "MIT" }
keywords = ["MD", "analysis", "lammps"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.21.1",
    "matplotlib >= 3.3.1",
    "scipy >= 1.6.0",
    "pandas >= 1.1.2",
    "seaborn >= 0.11.0",
    "statsmodels >= 0.12.0",
    "numba == 0.56.4",
    "llvmlite == 0.39.1",
    "tqdm>=4.50.0",
    ]

[project.optional-dependencies]
dev = ["black>=23.3.0", "isort>=5.10.0", "pytest>=7.4.0", "pytest-cov>=3.0.0", "pytest-benchmark>=4.0.0"]

[project.urls]
repository = "https://github.com/molmd/mdproptools"
changelog = "https://github.com/molmd/mdproptools/blob/master/CHANGELOG.md"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "mdproptools.__version__"}

[tool.setuptools.packages.find]
namespaces = false

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 88
order_by_type = true
length_sort = true
lines_between_types = 1
group_by_package = true
force_alphabetical_sort_within_sections = true
combine_straight_imports = true
balanced_wrapping = true
forced_separate = ["pymatgen", "mdproptools"]
